# SPM-assignment-24-25

./: .gitignore  CMakeLists.txt  README.md
assigment1/: Makefile  diff_outputs.sh  make_plot.ipynb  run_benchmark  run_benchmark.sh  softmax_auto  softmax_avx  softmax_avx.cpp  softmax_plain
assignment1/: softmax_auto.cpp  softmax_avx.cpp  softmax_plain.cpp
assignment2/: Makefile  collatz_par  collatz_par.cpp  collatz_seq  collatz_seq.cpp  make_plot.ipynb  results.csv  run_benchmark.sh
assignment2/include/: block_cyclic_scheduling.hpp  collatz_fun.hpp  dynamic_TP_scheduling.hpp  dynamic_index_scheduling.hpp  parse_utility.hpp  threadPool.hpp
assignment2/src/: block_cyclic_scheduling.cpp  collatz_par.cpp  collatz_seq.cpp  dynamic_TP_scheduling.cpp  dynamic_index_scheduling.cpp  parse_utility.cpp
assignment3/: Makefile  create_test_file.sh  example3  minizpar  minizseq  minizseq.cpp  run_benchmark.sh  submit_benchmark.sh  utility.hpp
assignment3/par_ver/: cmdline_param_parser.hpp  minizpar  minizpar.cpp  par_block_compressor.hpp  par_block_decompressor.hpp  par_utility.hpp
assignment3/tests/: complex_test.sh  simple_test.sh
assignment4/: Makefile  ff_merge_sort  ff_merge_sort.cpp  mpi_merge_sort  mpi_merge_sort.cpp  run_script.sh  seq_merge_sort  seq_merge_sort.cpp  speedup_SM_benchmark.sh  std_sort  std_sort.cpp  strong_scalability_DM_benchmark.sh  weak_scalability_DM_benchmark.sh
assignment4/bk/: shared_mem_speedup.csv  strong_scalability_mpi.csv  strong_scalability_mpi_log.txt  weak_scalability_mpi copy.csv  weak_scalability_mpi.csv  (+1 more)
(+28 files in other folders)
